# MoneyPrinterTurbo

./: README.md  config.example.toml  main.py  pyproject.toml  voice_azure.txt
app/: app.py
app/config/: config.py
app/controllers/v1/: llm.py  video.py
app/edge_tts/: __init__.py  constants.py  data_classes.py  edge_tts.py
app/services/: llm.py  state.py  task.py  video.py  voice.py
app/utils/: utils.py
test/services/: test_voice.py
webui/: Main.py
webui/i18n/: de.json  en.json  pt.json  vi.json  zh.json
