[project]
name = "clip-gen"
version = "0.1.0"
description = ""
authors = [
    { name = "ronghantao", email = "ronghantao@kuaishou.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "moviepy==2.2.1",
    "streamlit==1.45.0",
    "fastapi==0.115.6",
    "uvicorn==0.32.1",
    "openai==1.56.1",
    "faster-whisper==1.1.0",
    "loguru",
    "google.generativeai==0.8.3",
    "dashscope==1.20.14",
    "azure-cognitiveservices-speech==1.41.1",
    "redis==5.2.0",
    "python-multipart==0.0.19",
    "requests>=2.31.0"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
